additive noise with LTI operator systems

--- a/common/math/graphics/system/sysT_mnoise.tex
+++ b/common/math/graphics/system/sysT_mnoise.tex
@@ -14,10 +14,7 @@
     %framesize=7.5mm,% width and height of transfer function boxes
     }%
   %-------------------------------------
-  %  _____  transfer function box
-  % |     |
-  % |  H  |
-  % |_____|
+  % operator box
   %-------------------------------------
   \fnodeput{0}{ 0}{ 0}{sysH}{$\opT$}%
     %       |   |  |   |       |____ label in box
