--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -319,13 +319,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:dual_addnoise}.
     \hline
       \includegraphics{graphics/sysT_xyvq.pdf}
      &\includegraphics{graphics/sysT_xyup.pdf}
-     &\includegraphics{graphics/sysT_mnoise.pdf}
-    \\
-      (A) \xref{thm:sysT_addnoise_v}&(B) \xref{thm:sysT_addnoise_u}    &(C) \xref{thm:sysT_mnoise}
-    \\                              &    \xref{thm:sysH_addnoise_lti}  &
+     &\includegraphics{graphics/sysT_xypw.pdf}
+    \\(A) $\Rxy(m)=\Rxq(m)$         &(B) $\Rxy(m)=\Rpy(m)-\Ruy(m)$     &(C) $\Rxy(m)=\Rpy(m)$
+    \\\xref{thm:sysT_addnoise_v}&    \xref{thm:sysT_addnoise_u}    &    \xref{thm:sysT_addnoise_w}
     \\\hline
   \end{tabular}
-  \caption{\label{fig:sysT_addnoise}Additive noise with transform $\opT$}
+  \caption{\label{fig:opT_addnoise}Additive noise with \prope{linear}/\propb{non-linear} operator $\opT$}
 \end{figure}
 
 %20190201%The following three theorems demonstrate:
@@ -335,14 +334,14 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:dual_addnoise}.
 %20190201%  \item Adding zero-mean uncorrelated noise \textbf{before} $\opT$ \textbf{does} \xref{thm:sysT_addnoise_u}.
 %20190201%        \textbf{However}, if $\opT$ is \prope{LTI}, then the cross-correlation is 
 %20190201%        simply $\Rxy=\fh(n)\conv\Rxx$ \xref{thm:sysH_addnoise_lti}.
-%20190201%  \item Zero-mean uncorrelated input measurement noise \textbf{does not} \xref{thm:sysT_mnoise}.
+%20190201%  \item Zero-mean uncorrelated input measurement noise \textbf{does not} \xref{thm:sysT_addnoise_w}.
 %20190201%\end{listi}
 
 %---------------------------------------
 \begin{theorem}
 \label{thm:sysT_addnoise_v}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (A).
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_addnoise} (A).
 \thmbox{
   \brb{\begin{array}{FrclDD}
       (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)          &(\prope{WSS})          & and
@@ -404,9 +403,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (A)
 %---------------------------------------
 \begin{theorem}
 \label{thm:sysT_addnoise_u}
-%\includegraphics{graphics/sysH_xyuvpq.pdf}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (B).
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_addnoise} (B).
 \thmbox{
   \brb{\begin{array}{FMMD}
       (A).& $\rvx(n)$               is  & (\prope{WSS})          & and
@@ -441,9 +439,9 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (B)
 
 %---------------------------------------
 \begin{theorem}
-\label{thm:sysT_mnoise}
+\label{thm:sysT_addnoise_w}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (C).
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opT_addnoise} (C).
 \thmbox{
   \brb{\begin{array}{FMMD}
       (A).& $\rvx(n)$               is  & (\prope{WSS})          & and
@@ -486,17 +484,63 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (C)
 %=======================================
 \section{Additive noise and LTI operators}
 %=======================================
+\begin{figure}[h]
+  \centering
+  \begin{tabular}{|l|l|l|}
+    \hline
+      \includegraphics{graphics/sysH_xyvq.pdf}
+     &\includegraphics{graphics/sysH_xyup.pdf}
+     &\includegraphics{graphics/sysH_xypw.pdf}
+    \\(A) $\Swxy(\omega)= \FH^\ast(\omega)\Swxx(\omega)$       
+     &(B) $\Swxy(\omega)= \FH^\ast(\omega)\Swxx(\omega)$     
+     &(C) $\Swxy(\omega)= \FH^\ast(\omega)\Swpp(\omega)$     
+    \\\xref{cor:sysH_addnoise_v}  &    \xref{thm:sysH_addnoise_u}    &    \xref{cor:sysH_addnoise_w}
+    \\\hline
+  \end{tabular}
+  \caption{\label{fig:opH_addnoise}Additive noise with \propb{LTI} operator $\opH$}
+\end{figure}
+
+%---------------------------------------
+\begin{corollary}
+\label{cor:sysH_addnoise_v}
+%---------------------------------------
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opH_addnoise} (A).
+\corbox{
+  \brb{\begin{array}{FMMD}
+      (A).& $\rvx(n)$               is  & (\prope{WSS})           & and
+    \\(B).& $\rvu(n)$               is  & (\prope{zero-mean})     & and
+    \\(C).& $\rvx(n)$ and $\rvu(n)$ are & (\prope{uncorrelated})  & and
+    \\(D).& $\opH$                  is  & (\prope{LTI})           &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FrclD}
+    %  (1).& \Ryx(m)      &=& \fh(m)\conv\Rxx(m)       & and 
+    %\\(2).& \Szyx(z)     &=& \ZH(z)     \Szxx(z)      & and
+          & \Swxy(\omega)&=& \FH^\ast(\omega)\Swxx(\omega) &
+  \end{array}}
+  }
+\end{corollary}
+\begin{proof}
+  \begin{align*}
+    \Swxy(\omega)
+      &= \Swxq(\omega)
+      && \text{by \prefp{thm:sysT_addnoise_v}}
+    \\&= \FH^\ast(\omega)\Swxx(\omega)
+      && \text{by \prefp{cor:Swxy}}
+  \end{align*}
+\end{proof}
+
 %---------------------------------------
 \begin{theorem}
-\label{thm:sysH_addnoise_lti}
+\label{thm:sysH_addnoise_u}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:sysT_addnoise} (B).
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opH_addnoise} (B).
 \thmbox{
   \brb{\begin{array}{FMMD}
       (A).& $\rvx(n)$               is  & (\prope{WSS})           & and
     \\(B).& $\rvu(n)$               is  & (\prope{zero-mean})     & and
     \\(C).& $\rvx(n)$ and $\rvu(n)$ are & (\prope{uncorrelated})  & and
-    \\(D).& $\opH\eqd\opT$          is  & (\prope{LTI})           &
+    \\(D).& $\opH$                  is  & (\prope{LTI})           &
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
@@ -551,14 +595,55 @@ what effect does the additive uncorrelated noise sources have on the cross-stati
 the noise sources have \textbf{no effect}.
 
 %---------------------------------------
-\begin{minipage}{\tw-75mm}
+\begin{corollary}
+\label{cor:sysH_addnoise_w}
+%---------------------------------------
+Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:opH_addnoise} (C).
+\corbox{
+  \brb{\begin{array}{FMMD}
+      (A).& $\rvx(n)$               is  & (\prope{WSS})           & and
+    \\(B).& $\rvu(n)$               is  & (\prope{zero-mean})     & and
+    \\(C).& $\rvx(n)$ and $\rvw(n)$ are & (\prope{uncorrelated})  & and
+    \\(D).& $\opH$                  is  & (\prope{LTI})           &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{FrclD}
+    %  (1).& \Ryx(m)      &=& \fh(m)\conv\Rxx(m)       & and 
+    %\\(2).& \Szyx(z)     &=& \ZH(z)     \Szxx(z)      & and
+          & \Swxy(\omega)&=& \FH^\ast(\omega)\Swpp(\omega) &
+  \end{array}}
+  }
+\end{corollary}
+\begin{proof}
+  \begin{align*}
+    \Swxy(\omega)
+      &= \Swpy(\omega)
+      && \text{by \prefp{thm:sysT_addnoise_w}}
+    \\&= \FH^\ast(\omega)\Swpp(\omega)
+      && \text{by \prefp{cor:Swxy}}
+  \end{align*}
+\end{proof}
+
+\begin{figure}[h]
+  \centering%
+  \begin{tabular}{|c|c|}
+     \hline
+     \includegraphics{graphics/sysH_xyuvpq.pdf}%
+    &\includegraphics{graphics/sysH_mnoise.pdf}%
+   \\
+     (A) $\Swxy(\omega)= \FH^\ast(\omega)\Swxx(\omega)$ %communications additive noise system
+    &(B) $\Swxy(\omega)= \FH^\ast(\omega)\Swpp(\omega)$ %measurement    additive noise system
+   \\\xref{cor:sysH_cnoise}&\xref{cor:sysH_mnoise}
+   \\\hline
+  \end{tabular}
+\caption{\label{fig:sysH_addnoise}}
+\end{figure}
+
+%---------------------------------------
 \begin{corollary}
 \label{cor:sysH_cnoise}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated to the right:
-\end{corollary}
-\end{minipage}
-\qquad\tbox{\includegraphics{graphics/sysH_xyuvpq.pdf}}
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:sysH_addnoise} (A).
 \corbox{
   \brb{\begin{array}{FMMD}
       (A).& $\rvx(n)$               is  & (\prope{WSS})           & and
@@ -574,7 +659,7 @@ Let $\opS$ be the \structe{system} illustrated to the right:
           & \Swxy(\omega)&=& \FH^\ast(\omega)\Swxx(\omega) &
   \end{array}}
   }
-\\
+\end{corollary}
 \begin{proof}
 \begin{align*}
   \Swyx(\omega)
@@ -586,14 +671,10 @@ Let $\opS$ be the \structe{system} illustrated to the right:
 \end{proof}
 
 %---------------------------------------
-\begin{minipage}{\tw-75mm}
 \begin{corollary}
-\label{cor:sysH_cnoise}
+\label{cor:sysH_mnoise}
 %---------------------------------------
-Let $\opS$ be the \structe{system} illustrated to the right:
-\end{corollary}
-\end{minipage}
-\qquad\tbox{\includegraphics{graphics/sysH_mnoise.pdf}}
+Let $\opS$ be the \structe{system} illustrated in \prefp{fig:sysH_addnoise} (B).
 \corbox{
   \brb{\begin{array}{FMMD}
       (A).& $\rvx(n)$               is  & \prope{WSS}           & and
@@ -606,10 +687,10 @@ Let $\opS$ be the \structe{system} illustrated to the right:
   \brb{\begin{array}{FrclD}
      %(1).& \Ryx(m)      &=& \fh(m)\conv\Rxx(m)       & and 
      %(2).& \Szyx(z)     &=& \ZH(z)     \Szxx(z)      & and
-          & \Swxy(\omega)&=& \FH^\ast(\omega)\brs{\Swxx(\omega)-\Swww(\omega)} &
+          & \Swxy(\omega)&=& \FH^\ast(\omega)\Swpp(\omega) %\brs{\Swxx(\omega)-\Swww(\omega)} &
   \end{array}}
   }
-\\
+\end{corollary}
 \begin{proof}
 \begin{align*}
   \Swyx(\omega)
@@ -619,12 +700,10 @@ Let $\opS$ be the \structe{system} illustrated to the right:
     && \text{by \prefp{thm:sysT_addnoise_v}}
   \\&= \FH(\omega)\Swpp(\omega)
     && \text{by \prefp{cor:Swxy}}
-  \\&= \FH(\omega)\brs{\Swxx(\omega)-\Swww(\omega)}
-    && \text{by \prefp{cor:xvy}}
+  %\\&= \FH(\omega)\brs{\Swxx(\omega)-\Swww(\omega)}
+  %  && \text{by \prefp{cor:xvy}}
 \end{align*}
 \end{proof}
-
-
 
 %=======================================
 \section{Additive noise and dual operators}
