--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -825,10 +825,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
   \end{array}}$
   \\\indentx$\implies
   \brb{\begin{array}{F >{\ds}rc>{\ds}l DD}
-    \\(1).&\estH_1(\omega) &=& \FH(\omega)\brs{\text{$\frac{1}{1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}$}}
+     %(1).&\estH_1(\omega) &=& \FH(\omega)\brs{\text{$\frac{1}{1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}$}}
+      (1).&\estH_1(\omega) &=& \FH(\omega)\brs{\abox{\frac{1}{1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}}}
                            &(\prope{under-estimated})
                            &and
-    \\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}
+   %\\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}
+    \\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{\abox{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}}
                            &(\prope{over-estimated})
                            &
   \end{array}}$
