--- a/common/math/graphics/system/sysH_xypw.tex
+++ b/common/math/graphics/system/sysH_xypw.tex
@@ -4,7 +4,7 @@
 % nominal unit = 10mm
 % see pst-node package: https://ctan.org/pkg/pst-node
 %============================================================================
-\begin{pspicture}(-3.50,-2.50)(1.90,0.55)
+\begin{pspicture}(-3.50,-1.35)(1.90,0.55)
   %-------------------------------------
   % settings
   %-------------------------------------
@@ -16,7 +16,7 @@
   %-------------------------------------
   % operator box
   %-------------------------------------
-  \fnodeput{0}{ 0}{ 0}{sysT}{$\opT$}%
+  \fnodeput{0}{ 0}{ 0}{H}{$\opH$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
@@ -24,10 +24,8 @@
     %       |_______________________ angle
   %--------------------------------------------------------------------------
   % ADDERS: circles with $+$ inside
-  %          (left side)                   (right side)
   %--------------------------------------------------------------------------
-  \cnodeput{0}(-1.5,-1.0){addU}{$+$}%
-  \cnodeput{0}(+1.5,-1.0){addV}{$+$}%
+  \cnodeput{0}(-1.5,-1.0){addW}{$+$}%
     % |     |   |    |    |  |   |____ '+' symbol in circle
     % |     |   |    |    |  |________ L=left / R=right
     % |     |   |    |    |___________ node label
@@ -39,44 +37,32 @@
   % node locations
   %-------------------------------------
   \pnode(-2.50, 0.00){P}% signal input  label location
-  \pnode(-1.50,-2.00){X}% signal input  label location
-  \pnode( 1.50,-2.00){Y}% signal output label location
-  \pnode(-2.50,-1.00){U}% noise  input  label location
-  \pnode( 0.50,-1.00){V}% noise  output label location
-  \pnode(-0.85, 0.00){labX}% signal input  near operator label location
-  \pnode( 1.00, 0.00){labY}% signal output near operator label location
-  \nnode{-1.50}{0.00}{A}% signal output near h(n) label location
-  \pnode( 1.50, 0.00){B}% signal output near h(n) label location
+  \pnode(-0.50,-1.00){X}% signal input  label location
+  \pnode( 1.50, 0.00){Y}% signal output label location
+  \pnode(-2.50,-1.00){W}% noise  input  label location
+  \pnode(-1.50, 0.00){A}% signal output near h(n) label location
   %-------------------------------------
   % label text
   %-------------------------------------
-  \uput[-90](X) {$\rvx(n)$}% signal input  label
+  \uput[  0](X) {$\rvx(n)$}% signal input  label
   \uput[-90](Y) {$\rvy(n)$}% signal output label
-  \uput[180](U) {$\rvw(n)$}% input  noise  label
-  \uput[180](V) {$\rvv(n)$}% output noise  label
+  \uput[180](W) {$\rvw(n)$}% input  noise  label
   \uput[180](P) {$\rvp(n)$}% p = x + u
-  \uput[ 90](labY) {$\rvq(n)$}% y = q + v
-  %--------------------------------------
+  %-------------------------------------
   % system connections
-  %                         _____
-  %               A        |  |  |    Q  B
-  %   P ----------o------->|--T--|-------o
-  %               |        |__|__|       |
-  %               |                      |
-  %         U -->(+)addU            V-->(+)addV
-  %               |                      |
-  %               |                      |
-  %               X           |          Y
-  %                   where --T-- = (0,0)
-  %---------------------------|----------
-  \ncline{->}{P}{sysT}%
-  \ncline{->}{A}{addU}%
-  \ncline{->}{U}{addU}%
-  \ncline{->}{addU}{X}%
-  \ncline    {sysT}{B}%
-  \ncline{->}{B}{addV}%
-  \ncline{->}{V}{addV}%
-  \ncline{->}{addV}{Y}%
+  %                      _____
+  %            A        |  |  |
+  %      P ----o------->|--H--|---> Y
+  %            |        |__|__|
+  %            |
+  %      W -->(+)--> X
+  %          addW
+  %--------------------------------------
+  \ncline{->}{P}{H}%
+  \ncline{->}{A}{addW}%
+  \ncline{->}{W}{addW}%
+  \ncline{->}{addW}{X}%
+  \ncline{->}{H}{Y}%
   %-------------------------------------
   % development support--comment out before final version
   %-------------------------------------
