--- a/common/math/graphics/system/sysT_xypw.tex
+++ b/common/math/graphics/system/sysT_xypw.tex
@@ -4,7 +4,7 @@
 % nominal unit = 10mm
 % see pst-node package: https://ctan.org/pkg/pst-node
 %============================================================================
-\begin{pspicture}(-3.25,-0.55)(3.25,1.25)
+\begin{pspicture}(-3.50,-1.35)(1.90,0.55)
   %-------------------------------------
   % settings
   %-------------------------------------
@@ -16,7 +16,7 @@
   %-------------------------------------
   % operator box
   %-------------------------------------
-  \fnodeput{0}{ 0}{ 0}{sysH}{$\opH$}%
+  \fnodeput{0}{ 0}{ 0}{T}{$\opT$}%
     %       |   |  |   |       |____ label in box
     %       |   |  |   |____________ node name
     %       |   |  |________________ y location
@@ -26,42 +26,44 @@
   % ADDERS: circles with $+$ inside
   %          (left side)                   (right side)
   %--------------------------------------------------------------------------
-  \cnodeput{0}(-1.5,0){addL}{$+$}%
-  \cnodeput{0}(+1.5,0){addR}{$+$}%
-    % |     |   |   |  |  |   |____ $+$ in circle
-    % |     |   |   |  |  |________ L=left / R=right
-    % |     |   |   |  |___________ node label
-    % |     |   |   |______________ y location
-    % |     |   |__________________ x location
-    % |     |______________________ angle of + in circle
-    % |____________________________ circle node put
+  \cnodeput{0}(-1.5,-1.0){addW}{$+$}%
+    % |     |   |    |    |  |   |____ '+' symbol in circle
+    % |     |   |    |    |  |________ L=left / R=right
+    % |     |   |    |    |___________ node label
+    % |     |   |    |________________ y location
+    % |     |   |_____________________ x location
+    % |     |_________________________ angle of + in circle
+    % |_______________________________ circle node put
   %-------------------------------------
-  % label locations
+  % node locations
   %-------------------------------------
-  \pnode(-2.50,0.00){sysX}%         signal input  label location
-  \pnode(+2.50,0.00){sysY}%         signal output label location
-  \pnode(-1.50,0.75){sysU}%         noise  input  label location
-  \pnode(+1.50,0.75){sysV}%         noise  output label location
-  \pnode(-0.85,0.00){sysXh}%        signal input  near h(n) label location
-  \pnode(+0.85,0.00){sysYh}%        signal output near h(n) label location
+  \pnode(-2.50, 0.00){P}% signal input  label location
+  \pnode(-0.50,-1.00){X}% signal input  label location
+  \pnode( 1.50, 0.00){Y}% signal output label location
+  \pnode(-2.50,-1.00){W}% noise  input  label location
+  \pnode(-1.50, 0.00){A}% signal output near h(n) label location
   %-------------------------------------
   % label text
   %-------------------------------------
-  \uput[180](sysX) {$\rvx(n)$}% signal input  label
-  \uput[  0](sysY) {$\rvy(n)$}% signal output label
-  \uput[ 90](sysU) {$\rvu(n)$}% input  noise  label
-  \uput[ 90](sysV) {$\rvv(n)$}% output noise  label
-  \uput[-90](sysXh){$\rvp(n)$}% p = x + u
-  \uput[-90](sysYh){$\rvq(n)$}% y = q + v
+  \uput[  0](X) {$\rvx(n)$}% signal input  label
+  \uput[-90](Y) {$\rvy(n)$}% signal output label
+  \uput[180](W) {$\rvw(n)$}% input  noise  label
+  \uput[180](P) {$\rvp(n)$}% p = x + u
   %-------------------------------------
   % system connections
-  %-------------------------------------
-  \ncline{->}{sysX}{addL}%
-  \ncline{->}{addL}{sysH}%
-  \ncline{->}{sysH}{addR}%
-  \ncline{->}{addR}{sysY}%
-  \ncline{->}{sysU}{addL}%
-  \ncline{->}{sysV}{addR}%
+  %                      _____
+  %            A        |  |  |
+  %      P ----o------->|--T--|---> Y
+  %            |        |__|__|
+  %            |
+  %      W -->(+)--> X
+  %          addW
+  %--------------------------------------
+  \ncline{->}{P}{T}%
+  \ncline{->}{A}{addW}%
+  \ncline{->}{W}{addW}%
+  \ncline{->}{addW}{X}%
+  \ncline{->}{T}{Y}%
   %-------------------------------------
   % development support--comment out before final version
   %-------------------------------------
