--- a/common/math/graphics/system/sysT_xyup.tex
+++ b/common/math/graphics/system/sysT_xyup.tex
@@ -14,12 +14,9 @@
     %framesize=7.5mm,% width and height of transfer function boxes
     }%
   %-------------------------------------
-  %  _____  transfer function box
-  % |     |
-  % | h(n)|
-  % |_____|
+  % operator box
   %-------------------------------------
-  \fnodeput{0}{0.0}{ 0}{sysH}{$\opT$}%
+  \fnodeput{0}{0.0}{ 0}{opT}{$\opT$}%
     %       |   |   |   |       |____ label in box
     %       |   |   |   |____________ node name
     %       |   |   |________________ y location
@@ -29,7 +26,7 @@
   % ADDERS: circles with $+$ inside
   %          (left side)                   (right side)
   %--------------------------------------------------------------------------
-  \cnodeput{0}(-1.5,0){addL}{$+$}%
+  \cnodeput{0}(-1.5,0){addU}{$+$}%
     % |     |   |   |  |  |   |____ $+$ in circle
     % |     |   |   |  |  |________ L=left / R=right
     % |     |   |   |  |___________ node label
@@ -40,24 +37,30 @@
   %-------------------------------------
   % label locations
   %-------------------------------------
-  \pnode(-2.50,0.00){sysX}%         signal input  label location
-  \pnode(+1.25,0.00){sysY}%         signal output label location
-  \pnode(-1.50,0.75){sysU}%         noise  input  label location
-  \pnode(-0.85,0.00){sysXh}%        signal input  near h(n) label location
+  \pnode(-2.50,0.00){X}%         signal input  label location
+  \pnode(+1.25,0.00){Y}%         signal output label location
+  \pnode(-1.50,0.75){U}%         noise  input  label location
+  \pnode(-0.85,0.00){P}%         signal input  near h(n) label location
   %-------------------------------------
   % label text
   %-------------------------------------
-  \uput[180](sysX) {$\rvx(n)$}% signal input  label
-  \uput[ 90](sysY) {$\rvy=\opT\rvp$}% signal output label
-  \uput[ 90](sysU) {$\rvu(n)$}% input  noise  label
-  \uput[-90](sysXh){$\rvp(n)$}% p = x + u
+  \uput[180](X) {$\rvx(n)$}% signal input  label
+  \uput[ 90](Y) {$\rvy=\opT\rvp$}% signal output label
+  \uput[ 90](U) {$\rvu(n)$}% input  noise  label
+  \uput[-90](P) {$\rvp(n)$}% p = x + u
   %-------------------------------------
   % system connections
+  %            U
+  %            |      _____
+  %            |  P  |  |  |
+  %      X ---(+)--->|--T--|---> Y
+  %          addU    |__|__|
+  %-----------------------------------
   %-------------------------------------
-  \ncline{->}{sysX}{addL}%
-  \ncline{->}{sysU}{addL}%
-  \ncline{->}{addL}{sysH}%
-  \ncline{->}{sysH}{sysY}%
+  \ncline{->}{X}{addU}%
+  \ncline{->}{U}{addU}%
+  \ncline{->}{addU}{opT}%
+  \ncline{->}{opT}{Y}%
   %-------------------------------------
   % development support--comment out before final version
   %-------------------------------------
