--- a/common/math/graphics/system/sysT_xyvq.tex
+++ b/common/math/graphics/system/sysT_xyvq.tex
@@ -14,12 +14,9 @@
     %framesize=7.5mm,% width and height of transfer function boxes
     }%
   %-------------------------------------
-  %  _____  transfer function box
-  % |     |
-  % | h(n)|
-  % |_____|
+  % operator box
   %-------------------------------------
-  \fnodeput{0}{-1.0}{ 0}{sysH}{$\opT$}%
+  \fnodeput{0}{-1.0}{ 0}{opT}{$\opT$}%
     %       |   |     |  |       |____ label in box
     %       |   |     |  |____________ node name
     %       |   |     |_______________ y location
@@ -27,9 +24,8 @@
     %       |_________________________ angle
   %--------------------------------------------------------------------------
   % ADDERS: circles with $+$ inside
-  %          (left side)                   (right side)
   %--------------------------------------------------------------------------
-  \cnodeput{0}(+1.0,0){addR}{$+$}%
+  \cnodeput{0}(+1.0,0){addV}{$+$}%
     % |     |   |   |  |  |   |____ $+$ in circle
     % |     |   |   |  |  |________ L=left / R=right
     % |     |   |   |  |___________ node label
@@ -40,24 +36,29 @@
   %-------------------------------------
   % label locations
   %-------------------------------------
-  \pnode(-2.25,0.00){sysX}%         signal input  label location
-  \pnode(+2.00,0.00){sysY}%         signal output label location
-  \pnode(+1.00,0.75){sysV}%         noise  output label location
-  \pnode(+0.25,0.00){sysYh}%        signal output near h(n) label location
+  \pnode(-2.25,0.00){X}% signal input  label location
+  \pnode(+2.00,0.00){Y}% signal output label location
+  \pnode(+1.00,0.75){V}% noise  output label location
+  \pnode(+0.25,0.00){Q}% signal output near operator
   %-------------------------------------
   % label text
   %-------------------------------------
-  \uput[180](sysX) {$\rvx(n)$}% signal input  label
-  \uput[  0](sysY) {$\rvy(n)$}% signal output label
-  \uput[ 90](sysV) {$\rvv(n)$}% output noise  label
-  \uput[-90](sysYh){$\rvq=\opT\rvx$}%
+  \uput[180](X) {$\rvx(n)$}% signal input  label
+  \uput[  0](Y) {$\rvy(n)$}% signal output label
+  \uput[ 90](V) {$\rvv(n)$}% output noise  label
+  \uput[-90](Q){$\rvq=\opT\rvx$}%
   %-------------------------------------
   % system connections
+  %                           V   
+  %            _____          | 
+  %           |     |   |  Q  |addV
+  %     X --->|  T  |---o----(+)---> Y
+  %           |_____|   |(0,0)   
   %-------------------------------------
-  \ncline{->}{sysX}{sysH}%
-  \ncline{->}{sysH}{addR}%
-  \ncline{->}{addR}{sysY}%
-  \ncline{->}{sysV}{addR}%
+  \ncline{->}{X}{opT}%
+  \ncline{->}{opT}{addV}%
+  \ncline{->}{addV}{Y}%
+  \ncline{->}{V}{addV}%
   %-------------------------------------
   % development support--comment out before final version
   %-------------------------------------
