--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -237,6 +237,8 @@
 \newcommand{\gsize}{\normalsize}% font size for graphics
 \newcommand{\gsizes}{\footnotesize}% small font size for graphics
 \newcommand{\scell}{\cellcolor{shadedcell}}
+\newcommand{\abox}[1]{\begin{array}{c}#1\end{array}}% useful for properly centered vertical alignment
+\newcommand{\aboxc}[1]{\begin{array}{@{}c@{}}#1\end{array}}% useful for properly centered vertical alignment
 \newcommand{\tbox}[1]{\begin{tabular}{c}#1\end{tabular}}% useful for properly centered vertical alignment
 \newcommand{\tboxc}[1]{\begin{tabular}{@{}c@{}}#1\end{tabular}}% useful for properly centered vertical alignment
 \newcommand{\ftbox}[1]{\begin{tabular}{|c|}\hline#1\\\hline\end{tabular}}% framed \tbox{}
