system ID LTI H1 H2

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -826,11 +826,11 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
   \\\indentx$\implies
   \brb{\begin{array}{F >{\ds}rc>{\ds}l DD}
      %(1).&\estH_1(\omega) &=& \FH(\omega)\brs{\text{$\frac{1}{1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}$}}
-      (1).&\estH_1(\omega) &=& \FH(\omega)\brs{\abox{\frac{1}{1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}}}
+      (1).&\estH_1(\omega) &=& \FH(\omega)\brs{\abox{\frac{\ds1}{\ds1+\frac{\ds\Swww(\omega)}{\ds\Swpp(\omega)}}}}
                            &(\prope{under-estimated})
                            &and
    %\\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}
-    \\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{\abox{1 + \frac{\Swvv(\omega)}{\Swqq(\omega)}}}
+    \\(2).&\estH_2(\omega) &=& \FH(\omega)\brs{\abox{\ds1 + \frac{\ds\Swvv(\omega)}{\ds\Swqq(\omega)}}}
                            &(\prope{over-estimated})
                            &
   \end{array}}$
@@ -842,12 +842,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
     &\eqd \frac{\Swyx(\omega)}{\Swxx(\omega)}
     && \text{by definition of $\estH_1$}
     && \text{\xref{def:H1}}
-  \\&= \frac{\Swqp(\omega)}{\Swxx(\omega)}
-    && \text{by hypotheses (B)--(C)}
-    && \text{and \prefp{cor:sysH_addnoise}}
-  \\&= \frac{\Swqp(\omega)}{\Swpp(\omega)+\Swww(\omega)}
-    && \text{by hypotheses (B)--(C)}
-    && \text{and \prefp{cor:sysH_addnoise}}
+  \\&= \frac{\Swpp(\omega)\FH(\omega)}{\Swxx(\omega)}
+    && \text{by \prefp{cor:sysH_addnoise_w}}
   \\&= \frac{\Swpp(\omega)\FH(\omega)}{\Swpp(\omega)+\Swww(\omega)}
     && \text{by hypothesis (A)}
     && \text{and \prefp{cor:Swxy}}
@@ -860,9 +856,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
   \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swxy(\omega)}
     && \text{by hypothesis (C)}
     && \text{and \prefp{cor:xvy}}
+  \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swxq(\omega)}
+    && \text{by hypothesis (C)}
+    && \text{and \prefp{thm:sysT_addnoise_v}}
   \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swpq(\omega)}
     && \text{by hypothesis (C)}
-    && \text{and \prefp{cor:sysH_addnoise}}
+    && \text{and \prefp{thm:sysT_addnoise_w}}
   \\&= \frac{\Swqq(\omega) + \Swvv(\omega)}{\Swqq(\omega)/\FH(\omega)}
     && \text{by \prope{LTI} hypothesis (A)}
     && \text{and \prefp{cor:Swxy}}
@@ -880,7 +879,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise} (B).
 Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise}.
 \corbox{\begin{array}{lcl}
   \brb{\begin{array}{FMM}
-      (A).& \mc{2}{M}{hypotheses of \pref{thm:estH1} \scs and}
+      (A).& \mc{2}{M}{hypotheses of \pref{thm:estH1_mnoise} \scs and}
     \\(B).& $\rvu(n)=\rvw(n)=0$               & (\prope{no input noise})
   \end{array}}
   &\implies&
@@ -889,7 +888,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise}.
   \end{array}}
   \\
   \brb{\begin{array}{FMM}
-      (A).& \mc{2}{M}{hypotheses of \pref{thm:estH1} \scs and}
+      (A).& \mc{2}{M}{hypotheses of \pref{thm:estH1_mnoise} \scs and}
     \\(B).& $\rvv(n)=0$                       & (\prope{no output noise})
   \end{array}}
   &\implies&
